# xpfcorpus

./: .gitignore  .readthedocs.yaml  README.md  TODO.md  convert_to_yaml.py  pyproject.toml  sync-from-xpf.sh
.github/workflows/: sync-from-xpf.yml
docs/: README.md  api.rst  cli.rst  conf.py  index.rst  quickstart.rst  requirements.txt
xpfcorpus/: __init__.py  cli.py  exceptions.py  translator.py
xpfcorpus/data/: __init__.py  index.json
xpfcorpus/data/languages/: aak.json  aau.json  ab.json  acf.json  acr.json  aey.json  agg.json  aia.json  ake.json  amn.json  amp.json  an.json  aoj.json  aom.json  apu.json  apy.json  ar.json  arl.json  arn.json  ast.json  ata.json  avt.json  awx.json  ay.json  az.json  ba.json  bcl.json  bdd.json  be.json  bef.json  bg.json  bi.json  bmu.json  boa.json  boj.json  btx.json  bug.json  bvr.json  bxr.json  bzd.json  (+161 more)
xpfcorpus/data/rules/: __init__.py
xpfcorpus/data/verify/: __init__.py
xpfcorpus/engine/: __init__.py  processor.py  rules.py
xpfcorpus/io/: __init__.py  json_loader.py  language_code.py  legacy_loader.py  repository.py  yaml_exporter.py  yaml_loader.py
